fixed spacing

--- a/client/src/styles/carousel_app.css
+++ b/client/src/styles/carousel_app.css
@@ -23,7 +23,7 @@
 }
 
 .carousel_app {
-    display: flex; 
+    display: grid; 
     overflow-x: hidden; 
     width: 100%; 
 }
